--- a/_config.yml
+++ b/_config.yml
@@ -3,26 +3,26 @@ repository: nTahiri/resume
 favicon: images/favicon.ico
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Nabil Tahri
+title: FullStack & Cloud Developer
+email: nabil.tahr@bnc.ca / nabil.tahri@polymtl.ca
+website: https://github.com/nTahiri
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+twitter_username: NT_NTahri
+github_username:  nTahiri
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: chillwildlife
-linkedin_username: jameswgrant
+#instagram_username: chillwildlife
+linkedin_username: ntahri
 # pinterest_username: jekyll
-youtube_username: globalmtb
+#youtube_username: globalmtb
 # googleplus_username: +jekyll
 
 # About Section
 # about_title: About Me
-about_profile_image: images/profile.jpg
+about_profile_image: images/IMG_0188.jpg
 about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
