--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,8 +1,10 @@
 - layout: left
-  name: Certified Kubernetes Administrator
-  dates: 2020 - 2023
-  qualification: https://tinyurl.com/cka-nabil
+  name: Polytechnique Montreal
+  dates: 2012 - 2013
+  qualification: BSc Computer Science
   quote: >
-    dfddfddf
+    Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
   description: | # this will include new lines to allow paragraphs
-    Earners of this designation demonstrated the skills, knowledge and competencies to perform the responsibilities of a Kubernetes Administrator. Earners demonstrated proficiency in Application Lifecycle Management, Installation, Configuration & Validation, Core Concepts, Networking, Scheduling, Security, Cluster Maintenance, Logging / Monitoring, Storage, and Troubleshooting
+    During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+
+    I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
