--- a/_config.yml
+++ b/_config.yml
@@ -45,16 +45,14 @@ about_content: | # this will include new lines to allow paragraphs
 # more_title: A Little More About Me
 more_content: | # this will include new lines to allow paragraphs
   Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-   - Rock climbing
-   - Gaming
-   - Knitting
-   - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+   - VolleyBall
+   - CrossFit
 
 # Footer
 footer_show_references: true
 
 # Build settings
-remote_theme: nTahiri/resume
+remote_theme: sproogen/resume-theme
 
 sass:
   sass_dir: _sass
