--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,14 +1,4 @@
 - layout: left
-  name: Polytechnique Montreal
-  dates: 2012 - 2013
-  qualification: BSc Computer Science
-  quote: >
-    Established in 1636, Harvard is the oldest higher education institution in the United States, and is widely regarded in terms of its influence, reputation, and academic pedigree as a leading university in not just the US but also the world.
-  description: | # this will include new lines to allow paragraphs
-    During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
-
-    I spent a lot of my free time as a committee member of the *Harvard Mountaineering Club* taking on roles such as *Trip Secretary* and *Vice-President*.
-- layout: left
   name: Certified Kubernetes Administrator
   dates: 2020 - 2023
   qualification: https://tinyurl.com/cka-nabil
@@ -19,21 +9,17 @@
   name: Polytechnique Montreal
   dates: 2012 - 2016
   qualification: B. Eng Software Engineering - Security Mobility concentration
-  quote: >
-    Established in 1873, Polytechnique Montreal is the first francophone engineering school in North America.
   description: | # this will include new lines to allow paragraphs
     During my time at Polytechnique I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines.
 - layout: left
   name: Firefighter College - Morocco
   dates: 2006
   qualification: Firefighter officer
-  quote: >
   description: | # this will include new lines to allow paragraphs
-    Responsible of managing intervention team of city of Tanger
+    Intervention team Manager diplomat
 - layout: left
   name: My Ismail Meknees University - Morocco
   dates: 1998 - 2003
   qualification: Bachlor of Econimical Sciences - Managment and Audit
-  quote: >
   description: | # this will include new lines to allow paragraphs
-    Responsible of managing intervention team of city of Tanger
+    Compagnies managment and audit
