--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,8 +1,9 @@
 - layout: left
   name: Certified Kubernetes Administrator
   dates: 2020 - 2023
-  qualification: [CKA](https://tinyurl.com/cka-nabil)
+  qualification: ''
   quote: >
+    [https://tinyurl.com/cka-nabil](https://tinyurl.com/cka-nabil)
   description: | # this will include new lines to allow paragraphs
     Earners of this designation demonstrated the skills, knowledge and competencies to perform the responsibilities of a Kubernetes Administrator. Earners demonstrated proficiency in Application Lifecycle Management, Installation, Configuration & Validation, Core Concepts, Networking, Scheduling, Security, Cluster Maintenance, Logging / Monitoring, Storage, and Troubleshooting
 - layout: left
