--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,26 +1,25 @@
 - layout: left
   name: Certified Kubernetes Administrator
   dates: 2020 - 2023
-  qualification: ''
-  quote: >
-    [https://tinyurl.com/cka-nabil](https://tinyurl.com/cka-nabil)
+  qualification: 'https://tinyurl.com/cka-nabil'
   description: | # this will include new lines to allow paragraphs
     Earners of this designation demonstrated the skills, knowledge and competencies to perform the responsibilities of a Kubernetes Administrator. Earners demonstrated proficiency in Application Lifecycle Management, Installation, Configuration & Validation, Core Concepts, Networking, Scheduling, Security, Cluster Maintenance, Logging / Monitoring, Storage, and Troubleshooting
 - layout: left
   name: Polytechnique Montreal
   dates: 2012 - 2016
-  qualification: B. Eng Software Engineering - Security Mobility concentration
+  quote: >
+    B. Eng Software Engineering - Security Mobility concentration
   description: | # this will include new lines to allow paragraphs
     During my time at Polytechnique I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines.
 - layout: left
   name: Firefighter College - Morocco
   dates: 2006
-  qualification: Firefighter officer
+  quote: Firefighter officer
   description: | # this will include new lines to allow paragraphs
     Intervention team Manager diplomat
 - layout: left
   name: My Ismail Meknees University - Morocco
   dates: 1998 - 2003
-  qualification: Bachlor of Econimical Sciences - Managment and Audit
+  quote: Bachlor of Econimical Sciences - Managment and Audit
   description: | # this will include new lines to allow paragraphs
     Compagnies managment and audit
