--- a/_data/education.yml
+++ b/_data/education.yml
@@ -3,7 +3,7 @@
   dates: 2020 - 2023
   qualification: 'https://tinyurl.com/cka-nabil'
   description: | # this will include new lines to allow paragraphs
-    Earners of this designation demonstrated the skills, knowledge and competencies to perform the responsibilities of a Kubernetes Administrator. Earners demonstrated proficiency in Application Lifecycle Management, Installation, Configuration & Validation, Core Concepts, Networking, Scheduling, Security, Cluster Maintenance, Logging / Monitoring, Storage, and Troubleshooting
+    Knowledge and competencies to perform the responsibilities of a Kubernetes Administrator. Application Lifecycle Management, Installation, Configuration & Validation, Core Concepts, Networking, Scheduling, Security, Cluster Maintenance, Logging / Monitoring, Storage, and Troubleshooting
 - layout: left
   name: Polytechnique Montreal
   dates: 2012 - 2016
