--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,9 +1,11 @@
 - layout: left
-  company: The Boring Company
-  link: boringcompany.com
-  job_title: Senior Network System Administrator
-  dates: November 2017 - Present
-  quote: >
-   Solving 21st century problems by diging holes and making game changing products like the *not a flamethrower*
+  company: National Bank of Canada- Banking as Service Team
+  job_title: Senior Adviser - Full Stack Golang Developer & Kubernetes (EKS)
+  dates: Present
   description: | # this will include new lines to allow paragraphs
-    Every company needs its networks properly administered and The Boring Compay is no exception. Digging holes is hard and I play my part making sure the whole company stays connected. I lead a team of 5 people and enjoy driving the company to try new technologies.
+    Micro services Developer in Golang
+    Develop and maintain the pipelines for the building of infrastructures as well as deployment in AWS-EKS
+    Integrate Tekton pipelines in the SDLC of the project via IAC with Terraform
+    Participate in the launching of distributed architecture of mircroservices and GitOps
+    Insure that the security parameters of the bank service is respected
+
