--- a/_data/education.yml
+++ b/_data/education.yml
@@ -12,9 +12,9 @@
   description: | # this will include new lines to allow paragraphs
     During my time at Polytechnique I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines.
 - layout: left
-  name: Firefighter College - Morocco
+  name: Fire-fighter College - Morocco
   dates: 2006
-  quote: Firefighter officer
+  quote: Fire-fighter officer
   description: | # this will include new lines to allow paragraphs
     Intervention team Manager diplomat
 - layout: left
