--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ about_content: | # this will include new lines to allow paragraphs
   Bachelor of Software Engineering and Certified Kubernetes Administrator
 
   Full Stack Developer with DevOps Engineering experience
-  Team player, with passions in new technology and emerging technology industry practices
+  Team player, passionate in new technology and emerging technology industry practices
   Interest in distributed architectural systems, Mobil development, and cloud computing
   +1 (514) 662-2762
 
