--- a/_data/education.yml
+++ b/_data/education.yml
@@ -16,7 +16,7 @@
   dates: 2006
   quote: Fire-fighter officer
   description: | # this will include new lines to allow paragraphs
-    Intervention team Manager diplomat
+    Intervention team Manager diploma
 - layout: left
   name: My Ismail Meknees University - Morocco
   dates: 1998 - 2003
