--- a/_data/education.yml
+++ b/_data/education.yml
@@ -10,7 +10,7 @@
   quote: >
     B. Eng Software Engineering - Security Mobility concentration
   description: | # this will include new lines to allow paragraphs
-    During my time at Polytechnique I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines.
+    In the workforce, I have learnt to use key skill sets obtain at Polytechnique  such as ; teamwork and working  on tight deadlines
 - layout: left
   name: Fire-fighter College - Morocco
   dates: 2006
