--- a/_data/education.yml
+++ b/_data/education.yml
@@ -22,4 +22,4 @@
   dates: 1998 - 2003
   quote: Bachlor of Econimical Sciences - Managment and Audit
   description: | # this will include new lines to allow paragraphs
-    Compagnies managment and audit
+    Companies managment and audit
