--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -11,7 +11,7 @@
 
     Participate in the launching of distributed architecture of mircroservices and GitOps
 
-    Insure that the security parameters of the bank service is respected
+    Ensure that the security parameters of the bank service is respected
 - layout: left
   company: National Bank of Canada - Digital Studio
   job_title: Senior Adviser - DevOps Engineer in the Digital Studio- SME Jenkins and OpenShift
