--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -26,7 +26,7 @@
   quote: >
     C#.net, HTML, BootStrap, SQLServer, FTS
   description: | # this will include new lines to allow paragraphs
-    Participante in worldwide developer team TOPNOTCH APP http://topnotch5.com
+    Participant in worldwide developer team TOPNOTCH APP http://topnotch5.com
 - layout: left
   name: iOS Application BussCard
   dates: 2015
