--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ about_content: | # this will include new lines to allow paragraphs
 
   +1 (514) 662-2762
 
-  I am most skilled in: <mark>GoLang - Java SpringBoot</mark>, <mark>AWS - Kibernetes - Openshift</mark> and <mark>Jenkins - Tekton - circleci</mark>
+  I am most skilled in: <mark>GoLang - Java SpringBoot</mark>, <mark>AWS - Kubernetes - Openshift</mark> and <mark>Jenkins - Tekton - circleci</mark>
 
 # Projects Section
 # projects_title: Projects
