--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -10,7 +10,7 @@
 
     Develop a Mobile iOS application with Swift to interacte with the REST API
 - layout: left
-  name: Web Application
+  name: Web Application - Lone Wolf
   dates: 2016
   quote: >
     NodeJS, Jade, MongoDB, AngularJS
