--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -7,11 +7,11 @@
 
     Establish a Bank level Security Standard for AWS-EKS
 
-    Advise delievery teams to follow Security good practices in AWS 
+    Advise delievery teams to follow Security good practices in AWS
 - layout: left
   company: National Bank of Canada - Banking as Service Team
   job_title: Senior Adviser - Full Stack Golang Developer & Kubernetes (EKS)
-  dates: Present
+  dates: May 2020
   description: | # this will include new lines to allow paragraphs
     Micro services Developer in Golang
 
