--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -42,7 +42,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ./_site/index.html
+      url: ./_site
     runs-on: ubuntu-latest
     needs: build
     steps:
