--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -28,8 +28,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-     # - name: Setup Pages
-     #   uses: actions/configure-pages@v3
+      - name: Setup Pages
+        uses: actions/configure-pages@v3
      # - name: Build with Jekyll
      #   uses: actions/jekyll-build-pages@v1
      #   with:
