--- a/_data/education.yml
+++ b/_data/education.yml
@@ -20,6 +20,6 @@
 - layout: left
   name: My Ismail Meknees University - Morocco
   dates: 1998 - 2003
-  quote: Bachlor of Econimical Sciences - Managment and Audit
+  quote: Bachelor of Economic Sciences - management and Audit
   description: | # this will include new lines to allow paragraphs
-    Companies managment and audit
+    Companies management and audit
