--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,9 +32,9 @@ jobs:
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
-        # with:
-        #  source: ./
-        #  destination: ./_site
+        with:
+         source: ./
+         destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
 
