--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,8 @@ sass:
   style: compressed
 
 plugins:
- - jekyll-seo-tag
+#  - jekyll-seo-tag
+ - jekyll-include-cache
+ - gemfile
 
 theme: jekyll-theme-modernist
