--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -42,6 +42,8 @@ jobs:
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
+      - name: Upload pages artifact
+        uses: actions/upload-pages-artifact@v2
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
 
