--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -43,9 +43,9 @@ jobs:
         env:
           JEKYLL_ENV: production
       - name: Upload pages artifact
-        uses: actions/upload-pages-artifact@v2
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
+        uses: actions/upload-pages-artifact@v3
+      # - name: Upload artifact
+      #   uses: actions/upload-artifact@v3
 
   # Deployment job
   deploy:
