--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,8 @@ about_profile_image: images/IMG_0188.jpg
 about_content: | # this will include new lines to allow paragraphs
   Bachelor of Software Engineering and Certified Kubernetes Administrator
 
-  Full Stack Developer with DevOps Engineering experience
-  Team player, passionate in new technology and emerging technology industry practices
-  Interest in distributed architectural systems, Mobil development, and cloud computing
+  DevOps expertise with Full Stack Developer and a Bachelor's in Software Engineering. Certified Kubernetes Administrator. 
+  Passionate about new and emerging technologies, particularly distributed systems and cloud computing. Proven team player
 
   +1 (514) 662-2762
 
